etc/openshift/mysql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      volumes:
        - 
          name: mysql-vol
          persistentVolumeClaim:
            claimName: mysql-pvc
        - 
          configMap:
            name: mysql-init-cm
          name: mysql-init-vol
      containers:
        - 
          args:
            - $(MYSQL_ARG_1)
            - $(MYSQL_ARG_2)
            - $(MYSQL_ARG_3)
            - $(MYSQL_ARG_4)
          image: 'mysql:5.7'
          name: mysql-container
          ports:
            - 
              containerPort: 3306
              protocol: TCP
          volumeMounts:
            - 
              mountPath: /var/lib/mysql
              name: mysql-vol
            - 
              mountPath: /docker-entrypoint-initdb.d
              name: mysql-init-vol
