etc/openshift/xwiki-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xwiki-deploy
spec:
  selector:
    matchLabels:
      app: xwiki
  template:
    metadata:
      labels:
        app: xwiki
    spec:
      volumes:
        - 
          name: xwiki-vol
          persistentVolumeClaim:
            claimName: xwiki-pvc
      containers:
        - 
          image: secobau/docker-xwiki:2.5
          name: xwiki-container
          ports:
            - 
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - 
              mountPath: /usr/local/xwiki          
              name: xwiki-vol
