etc/openshift/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  ports:
    - 
      port: 3306
  selector:
    app: mysql
