etc/openshift/xwiki-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: xwiki-svc
spec:
  selector:
    app: xwiki
  ports:
    - 
      port: 8080
