etc/openshift/xwiki-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: xwiki-route
spec:
  to:
    kind: Service
    name: xwiki-svc
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
