etc/openshift/mysql-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-netpol
spec:
  ingress:
    - 
      from:
        - 
          podSelector:
            matchLabels:
              app: xwiki
      ports:
        - 
          port: 3306
  podSelector:
    matchLabels:
      app: mysql
