etc/openshift/xwiki-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: xwiki-netpol
spec:
  ingress:
    - 
      ports:
        - 
          port: 8080
  podSelector:
    matchLabels:
      app: xwiki
